# LDS_website_LLM

./: .gitignore  README.md  pyproject.toml
backend/: README.md  main.py  prepare_db.py  pyproject.toml
backend/server/: settings.py
